# meshcore-proxy

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/meshcore_proxy/: __init__.py  cli.py  decoder.py  proxy.py
tests/: test_cli.py  test_proxy.py
